--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,26 @@
+@import url(./bootstrap.css);
 html {
   height: 100%;
   width: 100%;
   font-family: "Titillium Web", sans-serif;
 }
 
-body {
-  min-height: 100%;
-  min-width: 100%;
-  background: linear-gradient(pink, violet);
+.min-width{
+  min-width:300px;
+}
+.small-width{
+  width:60px;
+  height:30px;
+  font-size:15px;
 }
 
-button {
+
+/* 
+body {
+  background-color:#f5f5f5 ;
+} */
+
+/* button {
   font-size: 7px;
 }
 
@@ -34,4 +44,4 @@ button {
   padding: 15px 20px 18px 18px;
   border-radius: 5px;
   box-shadow: 2px 5px 5px #333;
-}
+} */
